testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_right_bracket_or_hexadecimal/case15.expect.out
error: expected '}' or hexadecimal digit in unicode escape, found '"'
  ==> case15.cj:16:9:
   | 
16 |     \u{1232"""
   |     ~~     ^ expected '}' or hexadecimal digit
   |     |
   |     because it is in this Unicode escape
   | 
   # note: unicode escape may only contain hexadecimal digits

1 error generated, 1 error printed.
